css/style.css
:root {
    --dark: #28303D;
    --light: #D0D8D8;
  }

body {
    width: 100%;
    height: 100%;
    background-color: #28303D !important;
  }

  /* Jumbotron  */
  
.jumbotron {
    background-image: url(../images/herobanner2.png);
    background-size: cover;
    background-repeat: no-repeat;
    height: calc(30vh - 25px);
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .jumboCopy {
    background-color: #D0D8D8;
    display: flex;
  }

  .display-4 {
    justify-content: flex-start;
  }

  nav a {
    color: var(--light);
    text-decoration: none;
  }

  footer a {
    text-decoration: none;
  }

  .cardContainer {
    text-align: start;
  }

  .card-body {
    background-color: var(--light);
  }
  
  .valueProp {
    margin-top: 15px;
    margin-bottom: 15px;
  }

  .imageContainer {
    padding: 50px;
  }
  
  .imageContainer img {
    width: 100%;
  }

  .About, .Work, .Contact {
    background-color: var(--light);
    font: var(--dark);
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    font-size: 1.4rem;
    float: left;
    padding: 0px 10px;
    width: 100%;
    margin-bottom: 12px;
  }

